# Stanis_Clock

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  Mqtt_User_Guide.md  README.md  REFACTORING_SUMMARY.md  index.html  partitions.csv  partitions_ota.csv  post_build_ota.sh  sdkconfig.ci  sdkconfig.defaults  set_240mhz.sh
archive/: README.md
archive/binaries/: test_command_processor  test_json_validation  test_message_persistence  test_schema_registry
archive/logs/: monitor_output.txt
archive/scripts/: monitor_mqtt.sh  monitor_step3_responses.sh  mqtt_config.sh  mqtt_quick_test.sh  mqtt_test_comprehensive.py  real_world_test.sh  test_mqtt_commands.sh  test_step3_structured_responses.sh  test_with_monitor.sh
archive/tests/: test_command_processor.c  test_includes.c  (+4 more)
components/mqtt_manager/: CMakeLists.txt  mqtt_manager.c
components/mqtt_manager/include/: mqtt_manager.h
components/ota_manager/: CMakeLists.txt  ota_manager.c
components/ota_manager/include/: ota_manager.h
components/ota_manager/test/: test_sha256_calculation.c
docs/: README.md  wav2pcm.md
main/: CMakeLists.txt  thread_safety.c  thread_safety.h  wordclock.c  wordclock_brightness.c  wordclock_brightness.h  wordclock_display.c  wordclock_display.h  wordclock_error_log_mqtt.c  wordclock_error_log_mqtt.h  wordclock_mqtt_control.h  wordclock_mqtt_handlers.c  wordclock_mqtt_handlers.h  wordclock_ota_mqtt.c  wordclock_ota_mqtt.h  wordclock_transitions.c  wordclock_transitions.h
ota_files/: version.json  wordclock.bin.sha256
scripts/: test_ota_locally.sh
test_environment/: CLAUDE_CODE_USAGE_GUIDE.md  COMPATIBILITY_FIX.md  README.md  claude_code_test_suite.sh  demo_test.sh  setup_test_env.sh  test_config.sh
tools/: prepare_chimes.sh
(+223 files in other folders)
